@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.10 2003/12/26 18:26:59 wiz Exp $
+@comment $NetBSD: PLIST,v 1.11 2004/01/24 13:10:56 xtraeme Exp $
 bin/AbiWord-2.0
 bin/abiword
 bin/ttfadmin.sh
@@ -29,6 +29,7 @@ share/AbiSuite-2.0/AbiWord/glade/xap_UnixDlg_Zoom.glade
 share/AbiSuite-2.0/AbiWord/readme.txt
 share/AbiSuite-2.0/AbiWord/scripts/abw2html.pl
 share/AbiSuite-2.0/AbiWord/strings/am-ET.strings
+share/AbiSuite-2.0/AbiWord/strings/ar.strings
 share/AbiSuite-2.0/AbiWord/strings/be-BY.strings
 share/AbiSuite-2.0/AbiWord/strings/bg-BG.strings
 share/AbiSuite-2.0/AbiWord/strings/br-FR.strings
