@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.22 2003/12/26 18:26:59 wiz Exp $
+$NetBSD: distinfo,v 1.23 2004/01/24 13:10:56 xtraeme Exp $
 
-SHA1 (abiword-2.0.2.tar.gz) = cc4d12225941cfb866d8ca37af0b026906329978
-Size (abiword-2.0.2.tar.gz) = 25957833 bytes
+SHA1 (abiword-2.0.3.tar.bz2) = d582bc616ee98166004f7dd2879d7e5fe4f7d4ab
+Size (abiword-2.0.3.tar.bz2) = 22072758 bytes
 SHA1 (patch-aa) = 730e205f54516535394659c74e052bbe706e1bc2
 SHA1 (patch-ab) = a678cee31946b0102e6e62145b1d87eb3b323989
