@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4589 2004/01/24 10:55:48 jmmv Exp $
+$NetBSD: CHANGES,v 1.4590 2004/01/24 13:11:55 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -456,3 +456,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added XFree86-docs-4.3.0 [xtraeme 2004-01-24]
 	Added XFree86-4.3.0 [xtraeme 2004-01-24]
 	Updated mjpegtools to 1.6.1.93 [jmmv 2004-01-24]
+	Updated abiword to 2.0.3 [xtraeme 2004-01-24]
